[package]
name = "send_file_to_usb_printer"
version = "0.1.0"
edition = "2024"

[dependencies]
#raw-printer = "0.1.3"
windows = { version = "0.61.1", features = ["Win32", "Win32_Graphics", "Win32_Graphics_Printing", "Win32_Graphics_Gdi"] }
winapi = { version = "0.3.9", features = ["winspool", "minwindef"] }
widestring = "1.2.0"